// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv secret export "frodo esv secret export --all": should export all secrets to a single file 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export --all": should export all secrets to a single file 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export --all": should export all secrets to a single file: allSecrets.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --modified-properties --all-separate --no-metadata --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export --modified-properties --all-separate --no-metadata --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export --modified-properties --all-separate --no-metadata --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret.secret.json 1`] = `
{
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:51:06.765897Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --modified-properties --all-separate --no-metadata --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret-2.secret.json 1`] = `
{
  "secret": {
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:51:36.657796Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --modified-properties --all-separate --no-metadata --directory secretExportTestDir3": should export all secrets to separate files in the directory secretExportTestDir3: secretExportTestDir3/esv-test-secret-3.secret.json 1`] = `
{
  "secret": {
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:52:02.874153Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export --secret-id esv-test-secret": should export the secret with secret id "esv-test-secret" 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export --secret-id esv-test-secret": should export the secret with secret id "esv-test-secret" 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export --secret-id esv-test-secret": should export the secret with secret id "esv-test-secret": esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret-2.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -A": should export all secrets to separate files: esv-test-secret-3.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir4 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir4 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir4 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir4 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir4 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir4: secretExportTestDir4/esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "gBWIbXC9TXQs2ZnmUOwZhA==",
            "iv": "gOfmpU0dChV2b45B0EVjeQ==",
            "keySize": 16,
            "mac": "luZauuKBXypl3LTOEHseJg==",
            "purpose": "idm.password.encryption",
            "salt": "XFZfADvaztRvth1nlHGyKw==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir4 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir4: secretExportTestDir4/esv-test-secret-2.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "8O8XCFNDob/YKWKZMEvuQw==",
            "iv": "ncPjpvGqCkPAanljrgg2Tw==",
            "keySize": 16,
            "mac": "t9e06kxdzNRpxlTmybQQUw==",
            "purpose": "idm.password.encryption",
            "salt": "DbpvycSoKuVChtH4z1z4mQ==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir4 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir4: secretExportTestDir4/esv-test-secret-3.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "W0TDlyAKrTz+AsC0dMRdjQ==",
            "iv": "cJYCT4ipqK5t+mfzL1PIZA==",
            "keySize": 16,
            "mac": "nErNWHO1x/ARhTWwugGGgA==",
            "purpose": "idm.password.encryption",
            "salt": "eDevAjNs1CcRyLypKFBPog==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir5 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir5 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir5 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir5 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir5 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir5: secretExportTestDir5/esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "gBWIbXC9TXQs2ZnmUOwZhA==",
            "iv": "gOfmpU0dChV2b45B0EVjeQ==",
            "keySize": 16,
            "mac": "luZauuKBXypl3LTOEHseJg==",
            "purpose": "idm.password.encryption",
            "salt": "XFZfADvaztRvth1nlHGyKw==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir5 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir5: secretExportTestDir5/esv-test-secret-2.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "8O8XCFNDob/YKWKZMEvuQw==",
            "iv": "ncPjpvGqCkPAanljrgg2Tw==",
            "keySize": 16,
            "mac": "t9e06kxdzNRpxlTmybQQUw==",
            "purpose": "idm.password.encryption",
            "salt": "DbpvycSoKuVChtH4z1z4mQ==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -AD secretExportTestDir5 --include-active-values": should export all secrets including secret values to separate files in the directory secretExportTestDir5: secretExportTestDir5/esv-test-secret-3.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "W0TDlyAKrTz+AsC0dMRdjQ==",
            "iv": "cJYCT4ipqK5t+mfzL1PIZA==",
            "keySize": 16,
            "mac": "nErNWHO1x/ARhTWwugGGgA==",
            "purpose": "idm.password.encryption",
            "salt": "eDevAjNs1CcRyLypKFBPog==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -MNaD secretExportTestDir2": should export all secrets to a single file in the directory secretExportTestDir2 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -MNaD secretExportTestDir2": should export all secrets to a single file in the directory secretExportTestDir2 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -MNaD secretExportTestDir2": should export all secrets to a single file in the directory secretExportTestDir2: secretExportTestDir2/allSecrets.secret.json 1`] = `
{
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:51:06.765897Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:51:36.657796Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:52:02.874153Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -MNi esv-test-secret -D secretExportTestDir1": should export the secret with secret id "esv-test-secret" into the directory named secretExportTestDir1 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -MNi esv-test-secret -D secretExportTestDir1": should export the secret with secret id "esv-test-secret" into the directory named secretExportTestDir1 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -MNi esv-test-secret -D secretExportTestDir1": should export the secret with secret id "esv-test-secret" into the directory named secretExportTestDir1: secretExportTestDir1/esv-test-secret.secret.json 1`] = `
{
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "lastChangeDate": "2026-07-08T17:51:06.765897Z",
      "lastChangedBy": "volker.scheuber@pingidentity.com",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -a --file my-allSecrets.secret.json": should export all secrets to a single file named my-allSecrets.secret.json 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -a --file my-allSecrets.secret.json": should export all secrets to a single file named my-allSecrets.secret.json 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -a --file my-allSecrets.secret.json": should export all secrets to a single file named my-allSecrets.secret.json: my-allSecrets.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -a -f myAllSecrets_values.secret.json --include-active-values": should export all secrets including secret values to a single file named myAllSecrets_values.secret.json 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -a -f myAllSecrets_values.secret.json --include-active-values": should export all secrets including secret values to a single file named myAllSecrets_values.secret.json 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -a -f myAllSecrets_values.secret.json --include-active-values": should export all secrets including secret values to a single file named myAllSecrets_values.secret.json: myAllSecrets_values.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "JjwmH8qXV81UI2wuy46iCg==",
            "iv": "wp59cifqxve8nQpeMGcc4w==",
            "keySize": 16,
            "mac": "eS2iSNf8J5fQTsX5XgbpeA==",
            "purpose": "idm.password.encryption",
            "salt": "QfgLyt7mPFyG+q7FaBbAoA==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "mS3xrvXWXCJCW70GGjHlCw==",
            "iv": "Z5OaKJO9z3saDZbmXxRCeQ==",
            "keySize": 16,
            "mac": "IltfUArGflfa8awhz6zHrg==",
            "purpose": "idm.password.encryption",
            "salt": "0wHHIrypVamRDhDlUwC1Sg==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "T8ZDUXU9aJ4Uns6/963Xzg==",
            "iv": "2grdINZ5n5ufbbQoyATk9A==",
            "keySize": 16,
            "mac": "QiswFQi9nKhXCchqpA3d4A==",
            "purpose": "idm.password.encryption",
            "salt": "8tQ0Z+ADcVD8hriZssRrVw==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -a -f myAllSecrets_values-frodo-dev.secret.json --include-active-values": should export all secrets including secret values to a single file named myAllSecrets_values-frodo-dev.secret.json 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -a -f myAllSecrets_values-frodo-dev.secret.json --include-active-values": should export all secrets including secret values to a single file named myAllSecrets_values-frodo-dev.secret.json 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -a -f myAllSecrets_values-frodo-dev.secret.json --include-active-values": should export all secrets including secret values to a single file named myAllSecrets_values-frodo-dev.secret.json: myAllSecrets_values-frodo-dev.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "JjwmH8qXV81UI2wuy46iCg==",
            "iv": "wp59cifqxve8nQpeMGcc4w==",
            "keySize": 16,
            "mac": "eS2iSNf8J5fQTsX5XgbpeA==",
            "purpose": "idm.password.encryption",
            "salt": "QfgLyt7mPFyG+q7FaBbAoA==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-2": {
      "_id": "esv-test-secret-2",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "mS3xrvXWXCJCW70GGjHlCw==",
            "iv": "Z5OaKJO9z3saDZbmXxRCeQ==",
            "keySize": 16,
            "mac": "IltfUArGflfa8awhz6zHrg==",
            "purpose": "idm.password.encryption",
            "salt": "0wHHIrypVamRDhDlUwC1Sg==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Two",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
    "esv-test-secret-3": {
      "_id": "esv-test-secret-3",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "T8ZDUXU9aJ4Uns6/963Xzg==",
            "iv": "2grdINZ5n5ufbbQoyATk9A==",
            "keySize": 16,
            "mac": "QiswFQi9nKhXCchqpA3d4A==",
            "purpose": "idm.password.encryption",
            "salt": "8tQ0Z+ADcVD8hriZssRrVw==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret Three",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret.secret.json": should export the secret with secret id "esv-test-secret" into file named my-esv-test-secret.secret.json 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret.secret.json": should export the secret with secret id "esv-test-secret" into file named my-esv-test-secret.secret.json 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret.secret.json": should export the secret with secret id "esv-test-secret" into file named my-esv-test-secret.secret.json: my-esv-test-secret.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret_value.secret.json --include-active-values": should export the secret with secret id "esv-test-secret" including secret value into file named my-esv-test-secret_value.secret.json 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret_value.secret.json --include-active-values": should export the secret with secret id "esv-test-secret" including secret value into file named my-esv-test-secret_value.secret.json 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret_value.secret.json --include-active-values": should export the secret with secret id "esv-test-secret" including secret value into file named my-esv-test-secret_value.secret.json: my-esv-test-secret_value.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "S5TcUJ/RVUW1OLSG1+/4Cw==",
            "iv": "t/nlMbWvvP6MhsacxCGL+g==",
            "keySize": 16,
            "mac": "qwt4zFyMDy1po6t7nRUcLw==",
            "purpose": "idm.password.encryption",
            "salt": "LIzWf2PcVwS5uyINPWJwpA==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret_value-frodo-dev.secret.json --include-active-values": should export the secret with secret id "esv-test-secret" including secret value into file named my-esv-test-secret_value-frodo-dev.secret.json 1`] = `0`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret_value-frodo-dev.secret.json --include-active-values": should export the secret with secret id "esv-test-secret" including secret value into file named my-esv-test-secret_value-frodo-dev.secret.json 2`] = `""`;

exports[`frodo esv secret export "frodo esv secret export -i esv-test-secret -f my-esv-test-secret_value-frodo-dev.secret.json --include-active-values": should export the secret with secret id "esv-test-secret" including secret value into file named my-esv-test-secret_value-frodo-dev.secret.json: my-esv-test-secret_value-frodo-dev.secret.json 1`] = `
{
  "meta": Any<Object>,
  "secret": {
    "esv-test-secret": {
      "_id": "esv-test-secret",
      "activeValue": {
        "$crypto": {
          "type": "x-simple-encryption",
          "value": {
            "cipher": "AES/CBC/PKCS5Padding",
            "data": "S5TcUJ/RVUW1OLSG1+/4Cw==",
            "iv": "t/nlMbWvvP6MhsacxCGL+g==",
            "keySize": 16,
            "mac": "qwt4zFyMDy1po6t7nRUcLw==",
            "purpose": "idm.password.encryption",
            "salt": "LIzWf2PcVwS5uyINPWJwpA==",
            "stableId": "openidm-sym-default",
          },
        },
      },
      "activeVersion": "1",
      "description": "Test Secret",
      "encoding": "generic",
      "loaded": true,
      "loadedVersion": "1",
      "useInPlaceholders": true,
    },
  },
}
`;
